--- a/customCellTableView/Base.lproj/Main.storyboard
+++ b/customCellTableView/Base.lproj/Main.storyboard
@@ -21,22 +21,31 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="kisilerHucre" id="hby-H1-Psw" customClass="TableViewHucre" customModule="customCellTableView" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="44.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hby-H1-Psw" id="x7m-Dc-xed">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfW-lI-vMw">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfW-lI-vMw">
                                                     <rect key="frame" x="188.5" y="11" width="37.5" height="18"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <color key="textColor" systemColor="linkColor"/>
+                                                    <color key="textColor" systemColor="systemRedColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RO1-Kl-RBl">
+                                                    <rect key="frame" x="348" y="7" width="46" height="30.5"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <connections>
+                                                        <action selector="buttonTikla:" destination="hby-H1-Psw" eventType="touchUpInside" id="BxY-F4-3lZ"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="TfW-lI-vMw" firstAttribute="top" secondItem="x7m-Dc-xed" secondAttribute="topMargin" id="1wB-YH-fDg"/>
-                                                <constraint firstItem="TfW-lI-vMw" firstAttribute="centerX" secondItem="x7m-Dc-xed" secondAttribute="centerX" id="oLL-Wi-EhB"/>
+                                                <constraint firstAttribute="trailing" secondItem="RO1-Kl-RBl" secondAttribute="trailing" constant="20" symbolic="YES" id="6YU-GC-0Li"/>
+                                                <constraint firstItem="RO1-Kl-RBl" firstAttribute="top" secondItem="x7m-Dc-xed" secondAttribute="top" constant="7" id="A6P-QQ-9Sr"/>
+                                                <constraint firstItem="RO1-Kl-RBl" firstAttribute="centerY" secondItem="x7m-Dc-xed" secondAttribute="centerY" id="OlU-Df-pqD"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -65,11 +74,11 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
